[project]
name = "oniazusa"
version = "0.1.0"
description = "Transform photos into Leaf's Kizuato-style visual novel backgrounds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.0.0",
    "opencv-python-headless>=4.10.0",
]

[project.scripts]
oniazusa = "oniazusa.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
